[package]
name = "hrbf"
version = "0.3.0"
authors = ["Egor Larionov <egor.larionov@gmail.com>"]
license = "MPL-2.0"
description = "An implementation of Hermite Radial Basis Functions with higher order derivatives"
readme = "README.md"
edition = "2018"

homepage = "https://gitlab.com/elrnv/hrbf"
repository = "https://gitlab.com/elrnv/hrbf"
documentation = "https://docs.rs/hrbf"

keywords = ["hrbf", "implicit", "surface", "potential", "sdf"]

[badges]
gitlab = { repository = "elrnv/hrbf", branch = "master" }
maintenance = { status = "passively-maintained" }

[dependencies]
num-traits = "0.2"
na = { package = "nalgebra", version = "0.20" }

[dev-dependencies]
approx = "0.3"
autodiff = "0.1"
rand = "0.7"
