[package]
name = "chrbf"
version = "0.2.0"
authors = ["Egor Larionov <egor.larionov@gmail.com>"]
edition = "2018"

[lib]
name = "chrbf"
crate-type = ["cdylib", "rlib"] # rlib is needed for testing

[dependencies]
hrbf = { path = "../." }
na = { package = "nalgebra", version = "*" }
libc = "*"

[build-dependencies]
cbindgen = { git = "https://github.com/eqrion/cbindgen.git" }

[dev-dependencies]
approx = "0.3"
itertools = "0.7"
